# openswitch-ops-fand

./: CMakeLists.txt  DESIGN.md  README.md  groups  project.config  reviewers.config
include/: fand-locl.h  fand_plugins.h.in  physfan.h
ops-tests/: testsuite_gate@component.conf  testsuite_gate@feature.conf
plugins/i2c/: CMakeLists.txt  i2c-plugin.c
plugins/sysfs/: CMakeLists.txt  sysfs-plugin.c
plugins/yaml-i2c/: CMakeLists.txt  yaml-i2c-plugin.c
src/: fand.c  fand_plugins.c  physfan.c
src/cli/: fan_vty.c  vtysh_ovsdb_fan_context.c
